--- a/css/style.css
+++ b/css/style.css
@@ -4,26 +4,33 @@
   box-sizing: border-box;
 }
 
-.container{
+.container {
   display: flex;
-  align-items: center;
   justify-content: center;
-  margin: auto;
+  align-items: center;
   width: 100%;
   height: 100vh;
 }
 
-.item-container{
-  max-width: 600px;
-  height: 300px;
+.slider{
+  display: flex;
+  justify-content: center;
+  width: 70%;
+  height: 60vh;
 }
 
-.item{
+.item-container{
+  width: 80%;
+  height: 100%;
+}
+
+.item {
   width: 100%;
-  height: 300px;
-  overflow: hidden;
+  height: 100%;
 }
 
 .item img{
-  max-width: 100%;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
