--- a/css/style.css
+++ b/css/style.css
@@ -44,21 +44,21 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
+  object-position: 0 30%;
 }
 
 /* BOTTONE AVANTI */
 .next{
   position: absolute;
-  top: 50%;
-  transform: translate(-50%);
-  right: 10px;
+  top: 10px;
+  right: 50%;
   width: 40px;
   height: 40px;
-  font-size: 2rem;
+  font-size: 1.8rem;
   font-weight: bold;
   background-color: rgba(240, 240, 240, 0.5);
   color: #444;
   border-radius: 50%;
   cursor: pointer;
-  padding: 0 4px;
+  padding: 0 12px;
 }
