--- a/css/style.css
+++ b/css/style.css
@@ -12,23 +12,11 @@
   width: 100%;
   height: 100vh;
 }
-
-.slider{
-  display: flex;
-  justify-content: center;
-  width: 900px;
-  height: 400px;
-}
-
 /*********** CONTENITORE IMMMAGINI ***********/
-.item-container{
+.item {
+  position: relative;
   width: 900px;
   height: 400px;
-  position: relative;
-}
-
-.item {
-  height: 100%;
   display: none;
 }
 
@@ -50,8 +38,7 @@
 /* BOTTONE AVANTI */
 .next{
   position: absolute;
-  top: 10px;
-  right: 50%;
+  top: 25%;
   width: 40px;
   height: 40px;
   font-size: 1.8rem;
