--- a/css/style.css
+++ b/css/style.css
@@ -13,19 +13,20 @@
   height: 100vh;
 }
 /*********** CONTENITORE IMMMAGINI ***********/
-.item {
+.item-container {
   position: relative;
   width: 900px;
   height: 400px;
+}
+
+.item {
   display: none;
+  width: 100%;
+  height: 100%;
 }
 
 .active{
   display: block;
-}
-
-.hidden{
-  display: none;
 }
 
 .item img{
@@ -36,9 +37,9 @@
 }
 
 /* BOTTONE AVANTI */
-.next{
+.up, .down{
   position: absolute;
-  top: 25%;
+  right: 50%;
   width: 40px;
   height: 40px;
   font-size: 1.8rem;
@@ -48,4 +49,12 @@
   border-radius: 50%;
   cursor: pointer;
   padding: 0 12px;
+}
+
+.up{
+  top: 10px;  
+}
+
+.down{
+  bottom: 10px;
 }
